--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,24 @@
         android:theme="@style/Theme.MeRecicle"
         tools:targetApi="31">
         <activity
+            android:name=".UsuarioActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ColetadosActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DistribuidoraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EmpresaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LocalizaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MaterialActivity"
+            android:exported="false" />
+        <activity
             android:name=".RedefinirActivity"
             android:exported="false" />
         <activity
